# mini-RISCV-Linker

./: .gitignore  CMakeLists.txt  Linker.md  Readme.md  main.cpp  object.sh
include/: ELFheadr.hpp  Input.hpp  InputFile.hpp  ObjectFile.hpp  archive.hpp  args.hpp  chunk.hpp  context.hpp  file.hpp  filetype.hpp  inputSection.hpp  machinetype.hpp  mergeablesection.hpp  mergedsection.hpp  output.hpp  passes.hpp  sectionFragment.hpp  symbol.hpp  utils.hpp
src/: CMakeLists.txt  InputFile.cpp  ObjectFIle.cpp  chunk.cpp  file.cpp  filetype.cpp  inputSection.cpp  machinetype.cpp  mergeablesection.cpp  mergedsection.cpp  passes.cpp  sectionFragment.cpp  symbol.cpp  utils.cpp
tests/: test.c
